refactor: 구간-구간 관계 계산을 구간 컬렉션-구간 으로 변경